/**
 * Tencent is pleased to support the open source community by making Polaris available.
 *
 * Copyright (C) 2019 THL A29 Limited, a Tencent company. All rights reserved.
 *
 * Licensed under the BSD 3-Clause License (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * https://opensource.org/licenses/BSD-3-Clause
 *
 * Unless required by applicable law or agreed to in writing, software distributed
 * under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
 * CONDITIONS OF ANY KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations under the License.
 */

syntax = "proto3";
package proto;

option  java_package = "cn.polaris.plugin.remote";
option  java_multiple_files = false;
option  java_outer_classname = "rate_limit";
option  go_package = "./;plugin";

// RatelimitType rate limit type
enum RatelimitType{
  // IPRatelimit ip-based rate limit type.
  IPRatelimit = 0;
  // APIRatelimit api-based rate limit type.
  APIRatelimit = 1;
  // ServiceRatelimit service-based rate limit type.
  ServiceRatelimit = 2;
  // InstanceRatelimit instance-based rate limit type.
  InstanceRatelimit = 3;
}

// RateLimitRequest rate limit remote plugin request.
message RateLimitRequest {
  // Type which rate limit type.
  RatelimitType type = 1;
  // Key represents for api name or api identification.
  string key = 2;
}

// RateLimitResponse rate limit remote plugin response.
message RateLimitResponse {
  // Allow if allow current req set true, else set false.
  bool allow = 1;
}

